turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value setBrosseCouleur
	setBrosseCouleur(c)
        ^LangtonsAnt:4: error: not found: value lèveBrosse
	lèveBrosse
        ^LangtonsAnt:8: error: value droite is not a member of Unit
	case Color.white => setCouleurSol(Color.black) droite avance
                                                       ^LangtonsAnt:9: error: value gauche is not a member of Unit
	case Color.black => setCouleurSol(Color.white) gauche avance
                                                       ^