turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color) {
	setBrosseCouleur(c)
	baisseBrosse
	lèveBrosse
}
def step() {
getCouleurSol match {
	case Color.white => setCouleurSol(Color.black) droite avance
	case Color.black => setCouleurSol(Color.white) gauche avance
}
}
